--- a/.travis.yml
+++ b/.travis.yml
@@ -57,7 +57,7 @@ jobs:
       install: false
       env:
         - PRIVATE_IMAGE="$REGISTRY/registry-client"
-        - IMAGE="$REGISTRY/client"
+        - IMAGE="$REGISTRY/registry-client"
         - IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT"
         - IMAGE_TAG_MAJOR="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v(.*)\..*\..*/\1/g"`
         - IMAGE_TAG_MINOR="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v(.*)\..*/\1/g"`
@@ -76,7 +76,7 @@ jobs:
       install: false
       env:
         - PRIVATE_IMAGE="$REGISTRY/registry-client"
-        - IMAGE="$REGISTRY/client"
+        - IMAGE="$REGISTRY/registry-client"
         - IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT"
         - IMAGE_TAG_RC="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v//g"`
       script:
