--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,12 @@ stages:
   - tag
 
 env:
-  - PRIVATE_IMAGE="$REGISTRY/registry-client" IMAGE="$PRIVATE_IMAGE" IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT" IMAGE_TAG_DEVELOP="$IMAGE:develop" IMAGE_TAG_LATEST="$IMAGE:latest"
+  - PRIVATE_IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client" \
+    IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client" \
+    IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT" \
+    IMAGE_TAG_BRANCH="$PRIVATE_IMAGE:"`echo $TRAVIS_BRANCH | sed 's#/#-#g'` \
+    IMAGE_TAG_DEVELOP="$IMAGE:develop" \
+    IMAGE_TAG_LATEST="$IMAGE:latest"
 
 install:
   - npm install -g npx
@@ -25,7 +30,7 @@ cache:
 
 before_script:
   # - docker login -u "$DOCKER_USER" -p "$DOCKER_PASSWORD"
-  - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" "$REGISTRY"
+  - docker login -u "$PRIVATE_DOCKER_USER" -p "$PRIVATE_DOCKER_PASSWORD" "$PRIVATE_DOCKER_REGISTRY"
 
 jobs:
   include:
@@ -53,11 +58,19 @@ jobs:
         - docker push $IMAGE_TAG_LATEST
 
     - stage: tag
+      if: (type = push)
+      install: false
+      script:
+        - docker pull $IMAGE_TAG
+        - docker image tag $IMAGE_TAG $IMAGE_TAG_BRANCH
+        - docker push $IMAGE_TAG_BRANCH
+
+    - stage: tag
       if: (tag =~ ^v\d+\.\d+\.\d+$)
       install: false
       env:
-        - PRIVATE_IMAGE="$REGISTRY/registry-client"
-        - IMAGE="$REGISTRY/registry-client"
+        - PRIVATE_IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client"
+        - IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client"
         - IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT"
         - IMAGE_TAG_MAJOR="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v(.*)\..*\..*/\1/g"`
         - IMAGE_TAG_MINOR="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v(.*)\..*/\1/g"`
@@ -75,8 +88,8 @@ jobs:
       if: (tag =~ ^v\d+\.\d+\.\d+-rc\.\d+$)
       install: false
       env:
-        - PRIVATE_IMAGE="$REGISTRY/registry-client"
-        - IMAGE="$REGISTRY/registry-client"
+        - PRIVATE_IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client"
+        - IMAGE="$PRIVATE_DOCKER_REGISTRY/registry-client"
         - IMAGE_TAG="$PRIVATE_IMAGE:$TRAVIS_COMMIT"
         - IMAGE_TAG_RC="$IMAGE:"`echo $TRAVIS_TAG | sed -E "s/v//g"`
       script:
